# litex-example

./: .gitignore  Cargo.toml  README.md  build.rs  objcopy.cmd  soc-cmd
src/: main.rs
