[package]
name = "litex-example"
version = "0.1.0"
authors = ["Simon Thornington <simon.thornington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
riscv-rt = "0.8.0"
embedded-graphics = "0.6.2"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
nb = "1.0.0"
# st7789 = "0.5.0"
st7789 = { path = "../st7789" }
ssd1331 = { path = "../ssd1331", features = ["graphics"] }
#ssd1331 = "0.2.2"
display-interface = "0.4"
display-interface-i2c = "0.4"
display-interface-spi = "0.4"
litex-pac = { path = "../litex-pac", features = ["rt"] }
litex-hal = { path = "../rust-litex-hal" }
panic-halt = "0.2.0"
arrayvec = { version = "0.5", default-features = false }
numtoa = "0.2"
oorandom = "11.1.3"
